[package]
name = "cw-fetch-std"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.1.3"
cosmwasm-storage = "1.1.3"
cw-storage-plus = "1.0.1"
bech32 = "0.9.1"
sha2 = "0.10.6"
ripemd = "0.1.3"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }