[package]
name = "cw-fetch-std"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmwasm-std = "1.5.3"
cosmwasm-schema = "1.5.3"
cw-storage-plus = "1.2.0"
bech32 = "0.9.1"
sha2 = "0.10.6"
ripemd = "0.1.3"
serde = { version = "1.0.145", default-features = false, features = ["derive"] }
tiny-keccak = { version = "2.0.2", features = ["keccak"] }
hex = "0.4.3"
base64 = "0.21.7"
query-responses-hybrid-derive = { path = "query-responses-hybrid-derive" }